plugins {
    id 'fabric-loom' version '1.14.10'
    id 'maven-publish'
    id 'org.jetbrains.kotlin.jvm' version '2.1.0'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url = "https://maven.fabricmc.net/" }
    maven { url = "https://maven.shedaniel.me/" }
    maven { url = "https://maven.architectury.dev/" }
    mavenCentral()
}

dependencies {
    // Minecraft + mappings
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API — core Fabric library (required at runtime)
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // Fabric Language Kotlin — Kotlin runtime (Prestige-style stack)
    modImplementation "net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}"

    // Cloth Config API — settings / config GUI library (Prestige-style)
    modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
}

processResources {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
    it.options.encoding = "UTF-8"
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
    kotlinOptions {
        jvmTarget = "21"
        freeCompilerArgs += ["-Xjvm-default=all"]
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

kotlin {
    jvmToolchain(21)
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named("remapJar").configure {
    archiveClassifier.set("")
}
